# SimTacLS

./: LICENSE  README.md  cd.py  mcl.py  simtacls_realtime_demo.py  simtacls_run_realtime.py  tacnet_train_mutitouch_dataset.py
SOFA-files/: SimTacLS-controller.py  SimTacLS-runfile.py
SOFA-files/mesh/: marker-vtk.vtk  pointer-stl-fine.stl  skin-stl.stl  skin-vtk.vtk
catkin_ws/src/sofa_gazebo_interface/vitaclink_description/: CMakeLists.txt  package.xml
catkin_ws/src/sofa_gazebo_interface/vitaclink_description/launch/: vitaclink.rviz  vitaclink_rviz.launch
catkin_ws/src/sofa_gazebo_interface/vitaclink_description/meshes/: base_bot.dae  base_up.dae  bone.dae  bone.stl  camera_fisheye.dae  housing.dae  housing.stl
catkin_ws/src/sofa_gazebo_interface/vitaclink_description/urdf/: vitaclink.gazebo  vitaclink.xacro
catkin_ws/src/sofa_gazebo_interface/vitaclink_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/sofa_gazebo_interface/vitaclink_gazebo/launch/: vitaclink_world.launch
catkin_ws/src/sofa_gazebo_interface/vitaclink_gazebo/models/: marker.sdf  skin.sdf
catkin_ws/src/sofa_gazebo_interface/vitaclink_gazebo/scripts/: init_data.csv  mkdir.py  multiple_point_tactile_image_acquisition.py  parse_csv.py  skin_motion.py  stl_transfer.py
catkin_ws/src/sofa_gazebo_interface/vitaclink_gazebo/worlds/: vitaclink.world
dataset/: tactile_image_dataset.py
gan/models/: __init__.py  base_model.py  pix2pix_model.py
gan/options/: base_options.py
networks/: unet_model.py  unet_parts.py  vgg_model.py
resources/: label_idx.csv  node_idx.csv  skin.vtk
train_model/: pre-trained_models.txt
utils/: simtacls_utils.py  utils.py  visualize.py
