<?xml version="1.0"?>
<package format="2">
  <name>vitaclink_description</name>
  <version>0.0.0</version>
  <description>The vitaclink_description package</description>

  <maintainer email="quan-luu@jaist.ac.jp">Quan Luu</maintainer>

  <license>BSD</license>

  <author email="quan-luu@jaist.ac.jp">Quan Luu</author> 

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
